--- a/backend/.env
+++ b/backend/.env
@@ -8,7 +8,7 @@ JWT_COOKIE_EXPIRES_IN=30
 
 # Email Configuration (Gmail App Password)
 EMAIL_USER=internshipmanagementsystem2025@gmail.com
-EMAIL_PASS=ssbw znwq erzf keui
+EMAIL_PASS=zraw gpvv dvje rqbw
 
 # Email sender information
 FROM_EMAIL=internshipmanagementsystem2025@gmail.com
@@ -30,9 +30,12 @@ GOOGLE_REDIRECT_URI=http://localhost:5000/api/medications/sync/google-calendar/c
 
 # Twilio Configuration
 TWILIO_ACCOUNT_SID=ACdcf363d49c0ff80fac9bc1f76acff1f5
-TWILIO_AUTH_TOKEN=90aaf5b6ea40563e2150e50395fc04b5
+TWILIO_AUTH_TOKEN=74313c7dc207782d002128d3df924873
 TWILIO_PHONE_NUMBER=+17816041642
-
+# AC938b2ab1b8d635a6e951de01e40669c5
+# dee14005862e2913effd3da4b097a393
+# +16293023466
+# Recovery code = H1FVCPSQPW83BWUDUS4B9DVL
 
 # Express Session Secret - MAKE THIS MORE SECURE
 SESSION_SECRET=super_long_random_secure_string_for_sessions_1234567890_abcdefghijk
